fix overlap of err box and vert. form instruct.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -213,7 +213,7 @@ div.download-pdf a {
 div.inputform { margin: 1em; }
 div.inputform table tbody td { padding-bottom: 0.25em; }
 div.inputform table tbody th { text-align: left; padding-right: 1em; vertical-align: top; }
-.vertical-form-instructions { clear: right; float:right; margin-right: 20px; width: 400px; }
+.vertical-form-instructions { clear: right; float:right; margin-right: 20px; width: 375px; }
 
 /* Railsy forms -Jared 12/15/10 */
 /* Note the fixed width labels */
