--- a/app/assets/stylesheets/scaffold.css
+++ b/app/assets/stylesheets/scaffold.css
@@ -21,7 +21,7 @@ div.actions {
 }
 
 #error_explanation {
-  width: 450px;
+  width: 425px;
   border: 2px solid #C00;
   padding: 7px;
   padding-bottom: 0;
